# libbedrock

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: binary.h  bitstream.hpp  chunk.h  database_key.hpp  dimension.hpp  format.h  format.hpp  hashmap.h  key.hpp  nbt.h  nbt.hpp  position.hpp  subchunk.hpp
include/BedrockFormat/: binary.h  format.h  nbt.h
src/: binary.c  bitstream.cpp  chunk.c  format.cpp  key.cpp  nbt.c  nbt.cpp  subchunk.cpp
test/: test.cpp
